update jirp page

--- a/_fieldwork/jirp2023.md
+++ b/_fieldwork/jirp2023.md
@@ -1,5 +1,6 @@
 ---
 layout: page
+title: Juneau Icefield Expedition
 name: Juneau Icefield Expedition
 fullname: Juneau Icefield Research Program 2023
 institute: Foundation for Glacier and Environmental Research
@@ -23,36 +24,51 @@ skills:
   - expedition behavior
 image: icefield_intro.jpg
 ---
+The Juneau Icefield Research Program (JIRP) is a unique life experience where students can learn from nature in nature. We have traversed the Juneau Icefield, starting in Juneau, going up to Atlin, following the invisible trails of students and scientists of the past 75 years. The program builds upon the motto "Nature, Books, and Action", and gives students a cross-discplinary entry to glaciology. 
 
-Description. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+## Learnings
+We learn from our field staff how to survive, navigate, and appreciate the ice. We learn from our faculty members to understand, question, and research glaciers. We learn from our medics how to take care of each other. We learn from our artists how to express, capture, and contemplate the ice. And we learn from each other, every moment, how to listen, how to care, and how to love. The icefield is like a different world, a haven for your soul. On the icefield you can meet yourself - your true self, and realize that the person you want to be is already there - within you.
 
-### The Traverse
-<img align="left" width="200" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/traverse.gif">
+## The Land
+The Juneau Icefield Research Program takes place on the lands of the Tlingit (Lingit Ani), Carcross/Tagish First Nation, Taku River Tlingit, Tesling Tlingit, and Denendeh people. Their past guidance plays a huge role in the history of this program. Current students have been learning from their stories, and will hopefully continue to do so and extend their perspective on knowledge systems beyond science. JIRP wants to build stronger connections to all native communities, and strives to support the Tlingit community in building a program for their people - and learn together from nature.
 
-<img align="right" width="300" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/traversing.jpg">
+## The Art
+Here is a random collection of art pieces:
 
-&nbsp;
+**Photography**
+- [The Light that Got Lost](http://www.huffphoto.com/) (Art pictures by Ben Huff)
 
-### The Ice
-<img align="right" width="500" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/ice-waves.jpg">
+**Storytelling**
+- [Lessons on Vanishing](https://astralincoln.substack.com/p/lessons-on-vanishing) (Essay by Astra Lincoln)
+- [The Trickster, The Tree](https://www.noemamag.com/the-disappearing-tree/) (Essay by Astra Lincoln)
+- [These Students Are Part of 75-Year Study to Map Alaska's Glaciers](https://www.smithsonianmag.com/science-nature/students-part-75-year-study-map-alaska-glaciers-180981808/) (Magazine article by Ben Huff)
 
+**Filmography**
+- [The Icefield: An Expedition Memoir](https://www.youtube.com/watch?v=7cGqQOOKs6o) (Short movie (27 min) by Caroline Wexler)
+- [What is JIRP?](https://www.youtube.com/watch?v=2hSU3p9EXiA) (Video clip (5 min) by Andrew Opila)
 
-
-
-<img align="right" width="500" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/julia_science.JPG">
-
-
-
-<img align="left" width="300" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/drop.jpg">
-<img align="left" width="300" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/icefall.jpg">
-
-
-
-
-
-<img align="left" width="300" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/camplife.jpg">
+**Cyanotype**
+- [Multiple project by Hannah Perrine Mode](https://www.hannahpmode.com/) (Cyanotype)
 
 
-<img align="left" width="300" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/icefall_work.jpg">
+## Random Pictures from my Icefield-Friends
+<img align="left" width="350" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/traverse.gif" alt="A gif showing the traverse route in different parts.">
 
-<img align="left" width="300" style="vertical-align:middle;margin:0px 40px" src="../../assets/images/fieldwork/icefield/snowpit.jpg">
+<img align="right" width="500" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/ice-waves.jpg" alt="A bare glacier without snow, but the ice flows in soft waves. A mountain is in the haze in the background.">
+
+<img align="left" width="500" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/camplife.jpg" alt="Students and staff members in front of the cooking shack of Camp 10.">
+
+<img align="right" width="500" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/drop.jpg" alt="Two skiers looking deep down where a glacier drops many meters, all snow-covered. (Not an ice-fall). A rocky hill next to them lets you see how big everything is.">
+
+
+<img align="left" width="400" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/julia_science.JPG" alt="Me in the Gilkey Trench in front of some science equipment. We and the equipment just got dropped by the heli, so we can collect data, among others about the mysterious O-Gives (waves of a glacier after an ice-fall). We stayed there for almost six days.">
+
+
+<img align="right" width="500" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/icefall.jpg" alt="Dramatic pic of the icefield. Black stones give a strong constrast to the blue ice. An icefall is noisy, you will hear iceblocks, huge as houses, crash and tumble down every now and then.">
+
+
+<img align="left" width="300" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/icefall_work.jpg" alt="Two staff members in front of the icefield, setting up time-lapse cameras.">
+
+<img align="right" width="300" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/snowpit.jpg" alt="Some of my icefield friends, sitting happy in a snow pit they dug for science. They are goofing around in the sun, you can feel the warm atmosphere, and that this isn't their first snow pit.">
+
+<img align="left" width="300" style="vertical-align:middle;margin:40px 40px" src="../../assets/images/fieldwork/icefield/traversing.jpg" alt="My fellow Jirpers on telemark skis, on one of their traverse days. You see three of them from behind, skiing on an endless glacier, with heavy packs.">
